solution-hw2/style.css
hr {
    height:5px;
    border-width:0;
    background-color:black;
    align:"right";
    width:"10%"; 
    size:"2";
  }

h2 {
    font-size: 24px;
    font-family: 'verdana';
    font-weight: lighter;
}

h3 {
    font-size: 30px;
    font-family: 'verdana';
    font-weight: lighter;
}

h4 {
    font-size: 20px;
    font-family: 'verdana';
    font-weight: lighter;
    margin-top: 0;
    margin-bottom: 0;
}

h5 {
    font-size: 14px;
    font-family: 'verdana';
    font-weight: lighter;
}

p {
    font-size: 18px;
    font-family: 'verdana';
    font-weight: lighter;
}

a:link, a:visited { /* W3 Schools */
    color: black;
    padding: 5px 5px;
    text-align: left;
    display: inline-block;
    text-decoration: none;
  }
  
a:hover, a:active { /* W3 Schools */
    background-color: yellow;
    font-weight: bold;
    text-decoration: none;
  }

.prod {
    border: 2px solid black;
  }

.button{ /* W3 Schools */
    background-color: yellow; 
    border: 2px solid black;
    padding: 15px 15px;
    text-align: center;
    font-weight: bold;
    display: inline-block;
    font-size: 24px;
    text-decoration: none;
}

#logo:hover, #logo:active  {
  background-color: white;
  font-weight: normal;
}

.current {
  background-color: yellow;
  font-weight: bold;
  text-decoration: none;
}

div {
  background-color: white;
  width: 500px;
  border: none;
  padding: 50px;
}

.container {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

.item {
  display: flex;
  width: 100%;
  justify-content: space-evenly;
  align-items: center;
}

.pic {
  display: flex;
  flex-direction: column;
  margin-left: 0;
  margin-right: -5;
  width: 100%;
}

.details {
  display:flex;
  flex-direction: column;
  justify-content: space-evenly;
  width: 100%;

}
.photo, .end{
  display:flex;
  width: 100%;
  justify-content: space-evenly;
  align-tems: center;
}

